--- a/shop/templates/shop/product_single.html
+++ b/shop/templates/shop/product_single.html
@@ -51,10 +51,8 @@
 		              <div class="select-wrap">
 	                  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
 	                  <select name="" id="" class="form-control">
-	                  	<option value="">{{product.size.all}}</option>
-	                    <option value="">Medium</option>
-	                    <option value="">Large</option>
-	                    <option value="">Extra Large</option>
+	                  	<option value="">{{product.get_size_display}}</option>
+	                    
 	                  </select>
 	                </div>
 		            </div>
