--- a/shop/templates/shop/product_single.html
+++ b/shop/templates/shop/product_single.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-<<<<<<< HEAD
 {% load humanize %}
-=======
->>>>>>> dda3b204bf60e05416d0eca1366f60d6b4a937db
 
 {% block title %}
 {{ product.name }}
@@ -46,47 +43,23 @@
 								<a href="#" class="mr-2" style="color: #000;">500 <span style="color: #bbb;">Sold</span></a>
 							</p>
 						</div>
-<<<<<<< HEAD
     				<p class="price"><span>Rp {{product.price|intcomma}}</span></p>
     				<p>{{product.description}}
 						</p>
 						<div class="row mt-4">
 							<div class="col-md-6 mt-2">
 								
-							
+							<form action="{% url "cart:cart_add" product.id %}" method="post">
+								{% csrf_token %}
 							<div class="input-group col-md-10 d-flex mb-3">
-	             	<span class="input-group-btn mr-2 mt-2">
-=======
-    				<p class="price"><span>Rp {{product.price}}</span></p>
-    				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until.
-						</p>
-						<div class="row mt-4">
-							<div class="col-md-6">
-								<div class="form-group d-flex">
-		              <div class="select-wrap">
-	                  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-	                  <select name="" id="" class="form-control">
-	                  	<option value="">{{product.get_size_display}}</option>
-	                    
-	                  </select>
-	                </div>
-		            </div>
-							</div>
-							<div class="w-100"></div>
-							<div class="input-group col-md-6 d-flex mb-3">
-	             	<span class="input-group-btn mr-2">
->>>>>>> dda3b204bf60e05416d0eca1366f60d6b4a937db
+	             	<span class="input-group-btn mr-2 ">
 	                	<button type="button" class="quantity-left-minus btn"  data-type="minus" data-field="">
 	                   <i class="ion-ios-remove"></i>
 	                	</button>
 	            		</span>
-<<<<<<< HEAD
-	             	<input type="text" id="quantity" name="quantity" class="form-control input-number mt-2" value="1" min="1" max="100">
-	             	<span class="input-group-btn ml-2 mt-2">
-=======
-	             	<input type="text" id="quantity" name="quantity" class="form-control input-number" value="1" min="1" max="100">
-	             	<span class="input-group-btn ml-2">
->>>>>>> dda3b204bf60e05416d0eca1366f60d6b4a937db
+	             	{{ cart_product_form.quantity }}
+
+	             	<span class="input-group-btn ml-2 ">
 	                	<button type="button" class="quantity-right-plus btn" data-type="plus" data-field="">
 	                     <i class="ion-ios-add"></i>
 	                 </button>
@@ -94,14 +67,11 @@
 	          	</div>
 	          	<div class="w-100"></div>
 	          	<div class="col-md-12">
-<<<<<<< HEAD
 	          		<p style="color: #000;">{% if product.available %}Produk ini tersedia{% else %}Produk ini Habis{% endif %}</p>
-=======
-	          		<p style="color: #000;">600 kg available</p>
->>>>>>> dda3b204bf60e05416d0eca1366f60d6b4a937db
 	          	</div>
           	</div>
-          	<p><a href="cart.html" class="btn btn-black py-3 px-5">Add to Cart</a></p>
+          	<p><input type="submit" value="Add to cart" class="btn btn-black py-3 px-5"></p>
+			  </form>
     			</div>
     		</div>
     	</div>
@@ -267,11 +237,11 @@
 		        // Stop acting like a button
 		        e.preventDefault();
 		        // Get the field name
-		        var quantity = parseInt($('#quantity').val());
+		        var quantity = parseInt($('#id_quantity').val());
 		        
 		        // If is not undefined
 		            
-		            $('#quantity').val(quantity + 1);
+		            $('#id_quantity').val(quantity + 1);
 
 		          
 		            // Increment
@@ -282,13 +252,13 @@
 		        // Stop acting like a button
 		        e.preventDefault();
 		        // Get the field name
-		        var quantity = parseInt($('#quantity').val());
+		        var quantity = parseInt($('#id_quantity').val());
 		        
 		        // If is not undefined
 		      
 		            // Increment
 		            if(quantity>0){
-		            $('#quantity').val(quantity - 1);
+		            $('#id_quantity').val(quantity - 1);
 		            }
 		    });
 		    
