--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
                         <a class="dropdown-item" href="{% url 'shop:product_list' %}">Shop</a>
                         <a class="dropdown-item" href="wishlist.html">Wishlist</a>
                         <a class="dropdown-item" href="product-single.html">Single Product</a>
-                        <a class="dropdown-item" href="cart.html">Cart</a>
+                        <a class="dropdown-item" href="{% url 'cart:cart_detail' %}">Cart</a>
                         <a class="dropdown-item" href="checkout.html">Checkout</a>
                     </div>
                 </li>
